--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,5 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+	{eqc, {git, "git://github.com/rpt/eqcmini.git", {branch, "master"}}}
+]}.
+{extra_src_dirs, ["test"]}.
