adds profile for quickcheck ci

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,10 @@
 {erl_opts, [debug_info]}.
-{deps, [
-	{eqc, {git, "git://github.com/rpt/eqcmini.git", {branch, "master"}}}
+{deps, []}.
+
+{profiles, [
+  {quickcheck_ci, [
+    {deps, [{eqc, {git, "git://github.com/rpt/eqcmini.git", {branch, "master"}}}]},
+    {erl_opts, [debug_info]},
+    {extra_src_dirs, ["test"]}
+  ]}
 ]}.
-{extra_src_dirs, ["test"]}.
