fixes config for quickcheck

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {profiles, [
   {quickcheck_ci, [
     {deps, [{eqc, {git, "git://github.com/rpt/eqcmini.git", {branch, "master"}}}]},
-    {erl_opts, [debug_info]},
+    {erl_opts, [debug_info, {parse_transform,eqc_cover}]},
     {extra_src_dirs, ["test"]}
   ]}
 ]}.
