uses eqc rebar3 plugin

--- a/rebar.config
+++ b/rebar.config
@@ -2,9 +2,12 @@
 {deps, []}.
 
 {profiles, [
+  {test, [
+    {plugins, [rebar3_eqc]},
+    {erl_opts, [debug_info]}
+  ]},
   {quickcheck_ci, [
-    {deps, [{eqc, {git, "git://github.com/rpt/eqcmini.git", {branch, "master"}}}]},
     {erl_opts, [debug_info, {parse_transform,eqc_cover}]},
-    {extra_src_dirs, ["test"]}
+    {extra_src_dirs, ["eqc"]}
   ]}
 ]}.
