introduces pool controller

--- a/test/dummy/rebar.config
+++ b/test/dummy/rebar.config
@@ -1,4 +1,4 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {poolmachine, {git, "https://github.com/minostro/poolmachine.git", {branch, "renames-worker"}}}
+  {poolmachine, {git, "https://github.com/minostro/poolmachine.git", {branch, "stops-using-registered-names"}}}
 ]}.
