--- a/test/dummy/rebar.config
+++ b/test/dummy/rebar.config
@@ -1,4 +1,4 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {poolmachine, {git, "https://github.com/minostro/poolmachine.git", {branch, "notify_on_error"}}}
+  {poolmachine, {git, "https://github.com/minostro/poolmachine.git", {branch, "add-test-for-worker"}}}
 ]}.
