stops using eqc, starts using proper

--- a/rebar.config
+++ b/rebar.config
@@ -2,12 +2,11 @@
 {deps, []}.
 
 {profiles, [
-  {test, [
-    {plugins, [rebar3_eqc]},
-    {erl_opts, [debug_info]}
-  ]},
-  {quickcheck_ci, [
-    {erl_opts, [debug_info, {parse_transform,eqc_cover}]},
-    {extra_src_dirs, ["eqc"]}
+  {milton, [
+    {deps, [
+      {proper, {git, "git://github.com/manopapad/proper.git", {branch, "master"}}}
+    ]},
+    {erl_opts, [debug_info]},
+    {extra_src_dirs, ["test"]}
   ]}
 ]}.
