--- a/rebar.config
+++ b/rebar.config
@@ -2,11 +2,11 @@
 {deps, []}.
 
 {profiles, [
-  {milton, [
+  {ci, [
     {deps, [
       {proper, {git, "git://github.com/manopapad/proper.git", {branch, "master"}}}
     ]},
-    {erl_opts, [debug_info]},
-    {extra_src_dirs, ["test"]}
+    {extra_src_dirs, ["test"]},
+    {erl_opts, [debug_info]}
   ]}
 ]}.
