--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {deps, []}.
 
 {profiles, [
-  {ci, [
+  {test, [
     {deps, [
       {proper, {git, "git://github.com/manopapad/proper.git", {branch, "master"}}}
     ]},
